lang/examples/good/05_while_if.gt
fn main() -> int {
    var n = 10;
    var i = 0;

    while (i < n) {
        if (i % 3 == 0)
            print("nice\n");
        else
            print("not nice\n");
        i = i + 1;
    }

    return 0;
}
