lang/examples/bad/BreakOutsideLoop.gt
fn main() -> int {
    while (false) {
        print("nope\n");
    }
    break;
    return 0;
}
